# gmatlib

./: CHANGELOG.md  Cargo.toml  README.md
src/: error.rs  ffi.rs  lib.rs  trait_impls.rs
tests/: extra_tests.rs
