[package]
name = "gmatlib"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
num-traits = "0.2.17"

[lib]
crate-type = ["rlib", "cdylib"]

[[test]]
name = "extra-tests"
path = "tests/extra_tests.rs"
